# design_pattern

./: pyproject.toml
01_strategy_patterm/: duck.py  fly_behavior.py  main.py  quack_behavior.py  readme.md
02_observer_pattern/: display.py  display_element.py  main.py  observer.py  readme.md  subject.py  weather_data.py
